[tool.poetry]
name = "dating-app-backend"
version = "0.0.1"
description = "Dating App LLM Matcher"
authors = ["Naty Laza"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
python-dotenv = "^1.0.0"
websockets = "^11.0.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "~8.0.0"
ruff = "~0.5.6"
mypy = "~1.11.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"